--- a/tools/runner/runner.css
+++ b/tools/runner/runner.css
@@ -62,3 +62,20 @@ header.navbar-inverse {
 ul.error, ul.warning {
     padding:    0;
 }
+
+td.PASS {
+    color:  #48cfad;
+}
+
+td.FAIL {
+    color:  #ed5565;
+}
+
+td.TIMEOUT {
+    color:  #f6bb42;
+}
+
+td.ERROR {
+    color:  #da4453;
+    font-weight:    bold;
+}
