--- a/runner/runner.css
+++ b/runner/runner.css
@@ -62,7 +62,7 @@ body {
 }
 
 header.navbar-inverse {
-    background: linear-gradient(to bottom, rgb(7, 62, 128) 0px, rgb(0, 45, 80) 100%)
+    background: linear-gradient(to bottom, rgb(7, 62, 128) 0px, rgb(0, 45, 80) 100%);
 }
 
 ul.error, ul.warning {
